[package]
name = "tokio-kcp-neo"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
build = "build.rs"
description = "A Tokio-based KCP library for Rust."
license = "MIT"
repository = "https://github.com/czf0613/TokioKcp"
keywords = ["tokio", "kcp", "async", "network"]
categories = ["asynchronous", "network-programming"]

[dependencies]

[build-dependencies]
cc = "1"
